# ChangeLog for sys-apps/debianutils
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/debianutils/ChangeLog,v 1.126 2009/05/03 15:56:49 jer Exp $

*debianutils-3.1.1 (03 May 2009)

  03 May 2009; Jeroen Roovers <jer@gentoo.org> +debianutils-3.1.1.ebuild:
  Version bump.

*debianutils-3.1 (02 May 2009)

  02 May 2009; Jeroen Roovers <jer@gentoo.org> +debianutils-3.1.ebuild:
  Version bump.

*debianutils-3.0.2 (02 May 2009)

  02 May 2009; Jeroen Roovers <jer@gentoo.org> debianutils-3.0.1.ebuild,
  +debianutils-3.0.2.ebuild:
  Version bump. Remove commented epatches.

*debianutils-3.0.1 (01 May 2009)

  01 May 2009; Jeroen Roovers <jer@gentoo.org> +debianutils-3.0.1.ebuild:
  Version bump.

  18 Mar 2009; Brent Baude <ranger@gentoo.org> debianutils-2.28.5.ebuild:
  stable ppc, bug 260463

*debianutils-2.31 (14 Mar 2009)

  14 Mar 2009; Mike Frysinger <vapier@gentoo.org>
  +files/debianutils-2.31-no-bs-namespace.patch, +debianutils-2.31.ebuild:
  Version bump #259496 by Raúl Porcel.

  07 Mar 2009; Jeremy Olexa <darkside@gentoo.org> debianutils-2.28.5.ebuild:
  amd64 stable, bug 260463

  27 Feb 2009; Brent Baude <ranger@gentoo.org> debianutils-2.28.5.ebuild:
  stable ppc64, bug 260463

  08 Aug 2008; Jeroen Roovers <jer@gentoo.org> debianutils-2.28.2.ebuild,
  debianutils-2.28.4.ebuild, debianutils-2.28.5.ebuild,
  debianutils-2.29.ebuild, debianutils-2.30.ebuild:
  Add SMAIL license (bug #176006).

*debianutils-2.30 (08 Aug 2008)

  08 Aug 2008; Jeroen Roovers <jer@gentoo.org> +debianutils-2.30.ebuild:
  Version bump.

  10 Jul 2008; Jeroen Roovers <jer@gentoo.org> debianutils-2.28.5.ebuild:
  Stable for HPPA too.

*debianutils-2.29 (19 Jun 2008)

  19 Jun 2008; Mike Frysinger <vapier@gentoo.org> +debianutils-2.29.ebuild:
  Version bumps #228015.

  17 Jun 2008; Raúl Porcel <armin76@gentoo.org> debianutils-2.28.5.ebuild:
  alpha/ia64/sparc/x86 stable

  17 Jun 2008; Alexis Ballier <aballier@gentoo.org>