@@ -11,6 +11,7 @@ DIST debianutils_2.29.tar.gz 139191 RMD160 31e2ee74c0d9f07b1c35048780ae26214a32f
 DIST debianutils_2.30.tar.gz 139274 RMD160 2c5efa8d1573763f75f456327166f43d6989a8b4 SHA1 eab0ce4eb26d7997f2bbc240bb3639e90fe7ab19 SHA256 d62e98fee5b1a758d83b62eed8d8bdec473677ff782fed89fc4ae3ba3f381401
 DIST debianutils_2.31.tar.gz 139842 RMD160 68c9ad89953a782a0ed2dfc67894898e2b08a8d1 SHA1 98ab58fd934abe94913077b23c1861487a6c5727 SHA256 557ca67e5aaa4d2f3bb6c9aee2e0919405510870c3d38dcd9fd77b73998a0476
 DIST debianutils_3.1.1.tar.gz 123487 RMD160 66edb8ac9edbb9b1af43ba07d39b131323588ce0 SHA1 cb49b650af3de2d42b653db3b225197704633dbe SHA256 bbc8cc790535b16d8621cb46bd1367a9403737793b87cd9db4a39e85fce71a7e
+DIST debianutils_3.1.3.tar.gz 132108 RMD160 b38fdc56519ce22627d0dd320455b89460eafea9 SHA1 6de01d71eec751db913b8ad66e90fb4e63b7b27b SHA256 83861a6c28166b0c84ab248d44fcd19d8c3940fa43f9450a7a8c9870af59ae8f
 DIST debianutils_3.1.tar.gz 131938 RMD160 ce71f41d2dc63bd76efb6dbaa17a3d3497706ccf SHA1 bbd3dad0177c85e93a61e4ca02324cecc73d0d4f SHA256 41fb5f117fe273a671d3ebc5dbd9d240a084d717c73349cec7c4d7fa91cb0d2d
 EBUILD debianutils-2.28.2.ebuild 1348 RMD160 862bffcda3c2b9d7ab6b2a25a6b442b7654f4075 SHA1 97ac76238f47738f378731175208ecf1ad921256 SHA256 0d1e6bf9d41ecce4608dac49669d0177507a639fb326f3709208571ca9515ff3
 EBUILD debianutils-2.28.4.ebuild 1347 RMD160 bf382c2e4a79165471566c7efba074774f6ee972 SHA1 71b77e15975019bb2a604fa1c114edead13aca6c SHA256 91de08c24387015f8eb2d8f046927bb0a997d12185095730cbf667e7c8197d03
@@ -19,6 +20,7 @@ EBUILD debianutils-2.29.ebuild 1500 RMD160 443d3c20ae536f021322d4ae83f25e294340d
 EBUILD debianutils-2.30.ebuild 1521 RMD160 b3f0bd1da8c02070f39c0d1106711c674c38db3a SHA1 0c37cc6a2623baaf9722ed025d93df3b68a41d99 SHA256 f36d61c602c49a634473d65eef05d0a891a270d5797149cb93d14b507903f8eb
 EBUILD debianutils-2.31.ebuild 1532 RMD160 8721340c0a8e2467fe36ba7d6ab63ad7585244fd SHA1 10efdce9c1e35af437c265dcd21ccee2c52b759b SHA256 2515d40666ace2a3a2a5e80413de80938058cc77733d5abbd1125dcf4f16077c
 EBUILD debianutils-3.1.1.ebuild 1372 RMD160 31b110759f1662a0a1fd38d56853ad2657fef563 SHA1 7203ec0c256fde0aebe324ee3b0d062072f4b230 SHA256 20b98e4f75e780bb93ad786932b6e69234e147572b3365604d30872ec4f94898
+EBUILD debianutils-3.1.3.ebuild 1350 RMD160 4f11ab3fa110e2df5b5095dc5331235452f4cf2c SHA1 650c8173f760e1c6efc2caa08544b3d2cff37318 SHA256 d0c3e827b64fbe31cdb93ffbc64982d179aa18c88ef842c2e72d19cd4410ddd1
 EBUILD debianutils-3.1.ebuild 1348 RMD160 90fce75ecbd4b1ed6611cd27c023e843e1018157 SHA1 f3980a56bea61f448d190246b8af947f40a6b6c1 SHA256 de6e9e03332eeed2ac5b13ad832bad1f8c3908061a49eec8aaea18bb63c0723b
-MISC ChangeLog 17472 RMD160 3738db9839b2ebf35ccd107c124fd701794a0c45 SHA1 467b34d89991ceaafbe37eb67819eb5ac24519e2 SHA256 9c17c384af137b119a62db70cf8bd89632413f9ccb54515b56e46b6715894896
+MISC ChangeLog 17597 RMD160 761bfa2d62bd9dec9c1b696f2e257b6a05a1da4b SHA1 8bc1ade4b565c845b59f05c2f229aa6014ec52f2 SHA256 64d032708a77687f49b19b861adc3a7f73bf199729caea09a09f477b865fd3fd
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
