@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/debianutils
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/debianutils/ChangeLog,v 1.126 2009/05/03 15:56:49 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/debianutils/ChangeLog,v 1.127 2009/05/06 11:32:27 jer Exp $
+
+*debianutils-3.1.3 (06 May 2009)
+
+  06 May 2009; Jeroen Roovers <jer@gentoo.org> +debianutils-3.1.3.ebuild:
+  Version bump.
 
 *debianutils-3.1.1 (03 May 2009)
 
